fix image size on small viewports

--- a/website/static/website/styles/hello.css
+++ b/website/static/website/styles/hello.css
@@ -22,6 +22,10 @@
     border-radius: 1em;
 }
 
+#photo {
+    width: 80vw;
+}
+
 @media (min-width: 576px) {
     #photo {
         width: 400px;
