--- a/website/static/website/styles/performance.css
+++ b/website/static/website/styles/performance.css
@@ -6,6 +6,8 @@
 #resume {
     /* border: 1px solid black; */
     border-radius: 5px;
+    width: 80vw;
+    margin: 1rem auto;
 }
 
 .link {
